--- a/style.css
+++ b/style.css
@@ -225,10 +225,18 @@ body {
 .heroImage {
   width: 100%;
   height: 40rem;
+  overflow: hidden;
+  z-index: 0;
+  position: relative;
+}
+
+.heroImage img {
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   object-position: bottom;
-  z-index: 0;
   transform: scaleX(-1);
+  display: block;
 }
 
 
@@ -530,13 +538,13 @@ body {
 
 
   .bodyText {
-    font-size: 2.5vw;
+    font-size: 1.5rem;
+    margin: 0;
   }
 
   .body {
     display: flex;
     flex-direction: column;
-    /* justify-content: center; */
   }
 
   .header {
@@ -568,6 +576,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 45vh;
   }
 
   .heroTextContainer {
@@ -575,10 +584,11 @@ body {
     justify-content: center;
     align-items: center;
     gap: 0;
+    height: 50%;
   }
 
   .heroTitle {
-    font-size: 5rem;
+    font-size: 7rem;
   }
 
   .heroSubTitleContainer {
@@ -586,14 +596,33 @@ body {
     justify-content: center;
     text-align: center;
     width: 50vw;
+    height: 50%;
+    line-height: 1.2
   }
 
   .heroContent {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
-    gap: 10rem;
     height: 30rem;
+    gap: 5rem
+  }
+
+  .heroImage {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    height: 100%;
+  }
+
+  .heroImage img {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%) scaleX(-1);
+    width: 200%;
+    height: auto;
+    object-fit: cover;
   }
 
   .heroButton {
@@ -602,12 +631,13 @@ body {
   }
 
   .heroButtonContent {
-    width: 15rem;
-    height: 3rem;
+    width: 20rem;
+    height: 5rem;
     font-size: 1.2rem;
   }
 
-  .firstSectionContainer {
+  .firstSectionContainer,
+  .secondSectionContainer {
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -618,7 +648,8 @@ body {
     gap: 5%;
   }
 
-  .firstSectionContainerText {
+  .firstSectionContainerText,
+  .secondSectionContainerText {
     display: flex;
     align-items: center;
     height: 30vh;
@@ -626,20 +657,26 @@ body {
     font-size: 1.5vw;
   }
 
-  .firstSectionButton {
+  .firstSectionButton,
+  .secondSectionButton {
     display: flex;
     justify-content: center;
   }
 
-  .firstSectionContainerTitle {
+  .firstSectionContainerTitle,
+  .secondSectionContainerTitle {
     font-size: 5vw;
   }
 
 
   .firstSectionImage,
-  .firstSectionImageContainer {
+  .firstSectionImageContainer,
+  .secondSectionImage,
+  .secondSectionImageContainer {
     width: 100vw;
     height: 30vh;
   }
+
+
 
 }
