--- a/style.css
+++ b/style.css
@@ -576,7 +576,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 45vh;
+    height: 50rem;
   }
 
   .heroTextContainer {
@@ -652,7 +652,7 @@ body {
   .secondSectionContainerText {
     display: flex;
     align-items: center;
-    height: 30vh;
+    height: 30rem;
     width: 50vw;
     font-size: 1.5vw;
   }
@@ -665,7 +665,7 @@ body {
 
   .firstSectionContainerTitle,
   .secondSectionContainerTitle {
-    font-size: 5vw;
+    font-size: 5rem;
   }
 
 
@@ -674,9 +674,50 @@ body {
   .secondSectionImage,
   .secondSectionImageContainer {
     width: 100vw;
-    height: 30vh;
+    aspect-ratio: 1/1;
   }
 
+  .grid-gallery {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(4, auto);
+    width: 100%;
+    box-sizing: border-box;
+  }
 
+  .grid-gallery img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    display: block;
+  }
+
+  /* Голямата снимка заема първите два реда и двете колони */
+  .large-image {
+    grid-column: 1 / 3;
+    grid-row: 1 / 3;
+    aspect-ratio: 2 / 1;
+  }
+
+  /* Малките снимки - два реда по две снимки */
+  .small-image:nth-of-type(2) {
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+  }
+
+  .small-image:nth-of-type(3) {
+    grid-column: 2 / 3;
+    grid-row: 3 / 4;
+  }
+
+  .small-image:nth-of-type(4) {
+    grid-column: 1 / 2;
+    grid-row: 4 / 5;
+  }
+
+  .small-image:nth-of-type(5) {
+    grid-column: 2 / 3;
+    grid-row: 4 / 5;
+  }
 
 }
