--- a/style.css
+++ b/style.css
@@ -540,6 +540,7 @@ body {
   .bodyText {
     font-size: 1.5rem;
     margin: 0;
+    width: 35rem;
   }
 
   .body {
@@ -582,9 +583,10 @@ body {
   .heroTextContainer {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     gap: 0;
     height: 50%;
+    width: 80%;
   }
 
   .heroTitle {
@@ -594,7 +596,7 @@ body {
   .heroSubTitleContainer {
     display: flex;
     justify-content: center;
-    text-align: center;
+    text-align: left;
     width: 50vw;
     height: 50%;
     line-height: 1.2
@@ -627,7 +629,8 @@ body {
 
   .heroButton {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
+    width: 80%;
   }
 
   .heroButtonContent {
@@ -642,8 +645,8 @@ body {
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    padding-top: 2rem;
-    padding-bottom: 2rem;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
     width: 100vw;
     gap: 5%;
   }
@@ -651,16 +654,37 @@ body {
   .firstSectionContainerText,
   .secondSectionContainerText {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     height: 30rem;
-    width: 50vw;
+    width: 80%;
     font-size: 1.5vw;
   }
+
+  .sectionButtonContent {
+    width: 15rem;
+    height: 4rem;
+    font-size: 1.2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #ffffff;
+    border: 3px solid rgba(0, 0, 0, 0.5);
+    border-width: 3px;
+
+    text-transform: uppercase;
+    position: relative;
+    font-weight: bold;
+    color: rgb(0, 0, 0);
+    border-radius: 3rem;
+    font-size: 0.9rem;
+    letter-spacing: 0.04rem;
+  }
+
 
   .firstSectionButton,
   .secondSectionButton {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
   }
 
   .firstSectionContainerTitle,
