--- a/style.css
+++ b/style.css
@@ -14,17 +14,22 @@ body {
   font-size: 1vw;
 }
 
-
-.navbar,
-.footer,
 .firstSectionContainer,
-.secondSectionContainer,
-.grid-gallery {}
+.secondSectionContainer {}
+
 
 .firstSectionContainerText p,
 .secondSectionContainerText p {
   text-align: left;
   margin: 0;
+}
+
+.firstSectionTextButton {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  height: 100%;
+  justify-content: space-between;
 }
 
 .header {
@@ -541,6 +546,7 @@ body {
     font-size: 1.5rem;
     margin: 0;
     width: 35rem;
+    font-weight: 500;
   }
 
   .body {
@@ -584,7 +590,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    gap: 0;
+    gap: 2rem;
     height: 50%;
     width: 80%;
   }
@@ -634,9 +640,10 @@ body {
   }
 
   .heroButtonContent {
-    width: 20rem;
-    height: 5rem;
-    font-size: 1.2rem;
+    width: 16rem;
+    height: 5.5rem;
+    font-size: 1.6rem;
+    font-weight: 600;
   }
 
   .firstSectionContainer,
@@ -646,9 +653,8 @@ body {
     flex-direction: column;
     align-items: center;
     padding-top: 5rem;
-    padding-bottom: 5rem;
     width: 100vw;
-    gap: 5%;
+    gap: 10rem;
   }
 
   .firstSectionContainerText,
@@ -660,10 +666,15 @@ body {
     font-size: 1.5vw;
   }
 
+  .firstSectionTextButton {
+    display: flex;
+    width: 80%;
+  }
+
   .sectionButtonContent {
-    width: 15rem;
-    height: 4rem;
-    font-size: 1.2rem;
+    width: 16rem;
+    height: 5rem;
+    font-weight: 600;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -676,7 +687,7 @@ body {
     font-weight: bold;
     color: rgb(0, 0, 0);
     border-radius: 3rem;
-    font-size: 0.9rem;
+    font-size: 1.6rem;
     letter-spacing: 0.04rem;
   }
 
