--- a/style.css
+++ b/style.css
@@ -700,7 +700,9 @@ body {
   }
 
   .sectionButtonContent:hover {
-    display: none
+    color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
+    cursor: pointer;
   }
 
 
