--- a/style.css
+++ b/style.css
@@ -607,8 +607,6 @@ body {
     line-height: 1.2
   }
 
-  .heroSubTitleContainer p {}
-
   .heroContent {
     display: flex;
     justify-content: center;
@@ -654,22 +652,19 @@ body {
     flex-direction: column;
     align-items: center;
     padding-top: 5rem;
+    padding-bottom: 5rem;
     width: 100vw;
-    gap: 10rem;
+    gap: 5rem;
   }
 
   .firstSectionContainerText,
   .secondSectionContainerText {
     display: flex;
     align-items: flex-start;
-    height: 30rem;
+    height: 40%;
     width: 80%;
   }
 
-  .firstSectionContainerParagraph p,
-  .secondSectionContainerParagraph p {
-    font-size: 1.8rem;
-  }
 
   .firstSectionTextButton {
     display: flex;
