--- a/style.css
+++ b/style.css
@@ -178,7 +178,6 @@ body {
   font-weight: 200;
   line-height: 1.2rem;
   display: flex;
-  width: 20rem;
   margin: 0;
 }
 
@@ -634,7 +633,7 @@ body {
 
   .heroButton {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     width: 80%;
   }
 
@@ -649,10 +648,9 @@ body {
   .secondSectionContainer {
     display: flex;
     justify-content: center;
-    flex-direction: column;
+    flex-direction: column-reverse;
     align-items: center;
     padding-top: 5rem;
-    padding-bottom: 5rem;
     width: 100vw;
     gap: 5rem;
   }
@@ -700,7 +698,7 @@ body {
   .firstSectionButton,
   .secondSectionButton {
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
   }
 
   .firstSectionContainerTitle,
