--- a/style.css
+++ b/style.css
@@ -437,18 +437,15 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  /* запазва пропорции */
   display: block;
   aspect-ratio: 1 / 1;
 }
 
-/* Голяма снимка - заема първите 2 реда в първата колона */
 .large-image {
   grid-column: 1 / 2;
   grid-row: 1 / 3;
 }
 
-/* Малките снимки автоматично се разпределят в останалите клетки */
 .small-image:nth-of-type(2) {
   grid-column: 2 / 3;
   grid-row: 1 / 2;
@@ -505,7 +502,6 @@ body {
 .footerRightTextBox {
   width: 33.3%;
   box-sizing: border-box;
-  /* Optional spacing inside */
   word-wrap: break-word;
   overflow-wrap: break-word;
   white-space: normal;
@@ -525,24 +521,124 @@ body {
 }
 
 
+.productContainerApple {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.productContainerWrapper {
+  display: flex;
+  justify-content: center;
+  width: 100vw;
+  overflow: hidden;
+}
+
+.productContainer {
+  width: 75rem;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+
+
+.productCard {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 95%;
+  margin: 1rem 0;
+  background-color: #DDD;
+  border-radius: 0.4rem;
+  align-items: center;
+  gap: 1.5rem;
+  overflow: hidden;
+  border: 0.1rem solid #ddd;
+}
+
+.productImage {
+  width: 20rem;
+  height: auto;
+  object-fit: cover;
+  display: block;
+}
+
+.productCardText {
+  width: 95%;
+  max-width: 75rem;
+  height: 100%;
+  max-height: 20rem;
+  position: relative;
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  gap: 0.7rem;
+}
+
+.productTitle {
+  margin: 0;
+  font-size: 2.5rem;
+}
+
+.productPrice {
+  margin: 0;
+  font-size: 1.4rem;
+  text-decoration: underline;
+}
+
+.productDescription {
+  margin: 0;
+  font-size: 1rem;
+}
+
+.buttonBuyWrapper {
+  width: 100%;
+  height: 18rem;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+  padding-right: 1rem;
+}
+
+.buttonBuy {
+  width: 12rem;
+  height: 3rem;
+  font-weight: bold;
+  font-size: 1.4rem;
+  border: none;
+  border-radius: 0.4rem;
+  background-color: rgb(77, 186, 77);
+  align-self: flex-end;
+  justify-self: flex-end;
+  transition: background-color 0.2s, color 0.2s;
+}
+
+.buttonBuy:hover {
+  background-color: rgb(11, 118, 32);
+  cursor: pointer;
+  color: #fff;
+}
+
+
 /* mobileViewMediaQuery */
 
-
-
-@media(max-width:1000px) {
+@media (max-width: 1000px) {
   .hamburger {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 2.7rem;
-    height: 2.7rem;
     cursor: pointer;
     z-index: 999;
   }
 
 
   .bodyText {
-    font-size: 2.1rem;
+    font-size: 1.6rem;
     font-weight: 600;
     margin: 0
   }
@@ -594,7 +690,7 @@ body {
   }
 
   .heroTitle {
-    font-size: 8rem;
+    font-size: 4rem;
   }
 
   .heroSubTitleContainer {
@@ -602,7 +698,6 @@ body {
     justify-content: center;
     text-align: left;
     width: 80%;
-    height: 50%;
     line-height: 1.2
   }
 
@@ -610,7 +705,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 30rem;
     gap: 6rem
   }
 
@@ -737,7 +831,6 @@ body {
     aspect-ratio: 2 / 1;
   }
 
-  /* Малките снимки - два реда по две снимки */
   .small-image:nth-of-type(2) {
     grid-column: 1 / 2;
     grid-row: 3 / 4;
@@ -758,4 +851,105 @@ body {
     grid-row: 4 / 5;
   }
 
+  .productCard {
+    width: 30%;
+    background-color: #DDD;
+    height: auto;
+    margin: 1rem 0;
+    border: 1px solid #ddd;
+    gap: 5%;
+    flex-wrap: wrap;
+    flex: 1 1 20rem;
+    flex-shrink: 1;
+    flex-grow: 0;
+    padding: 1rem;
+  }
+
+  .productContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: auto;
+    max-width: 62rem;
+    margin: 0;
+    gap: 1rem;
+    flex-wrap: wrap;
+  }
+
+  .productContainerApple {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: auto;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+    margin: 0;
+    padding-top: 1rem;
+  }
+
+  .buttonBuyWrapper {
+    justify-content: center;
+    height: auto;
+  }
+
+  .productCardText {
+    width: 100%;
+    max-width: 20rem;
+  }
+
+  .buttonBuy {
+    width: auto;
+    height: auto;
+    padding-left: 8.5rem;
+    padding-right: 8.5rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    max-width: 20rem;
+  }
+
+  .buttonBuyWrapper {
+    max-width: 20rem;
+  }
+
+
+  .footerWrapperContainer {
+    height: 100%;
+  }
+
+  .footerContent {
+    display: flex;
+    align-items: left;
+    justify-content: center;
+    flex-direction: column;
+    width: 95%;
+    height: 40rem;
+    background-color: #000000;
+    gap: 2rem;
+  }
+
+
+  .footerLeftTextBox,
+  .footerCenterTextBox,
+  .footerRightTextBox {
+    width: 100%;
+    box-sizing: border-box;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    /* display: flex;
+    flex-direction: column;
+    justify-content: center; */
+    white-space: normal;
+    color: white;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
+
+  .footerLeftTextBox p,
+  .footerCenterTextBox p,
+  .footerRightTextBox p {
+    text-align: left;
+    font-size: 1.3rem;
+    text-transform: uppercase;
+    margin: 0.5rem 0;
+  }
 }
