--- a/style.css
+++ b/style.css
@@ -10,9 +10,6 @@ body {
 /* @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Luckiest+Guy&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Vollkorn:ital,wght@0,400..900;1,400..900&display=swap'); */
 
 
-.bodyText {
-  font-size: 1vw;
-}
 
 .firstSectionContainer,
 .secondSectionContainer {}
@@ -637,8 +634,8 @@ body {
   }
 
 
-  .bodyText {
-    font-size: 1.6rem;
+  .heroSubTitleContainer p {
+    font-size: 1.5rem;
     font-weight: 600;
     margin: 0
   }
@@ -647,6 +644,27 @@ body {
     display: flex;
     flex-direction: column;
   }
+
+  .firstSectionContainerParagraph,
+  .secondSectionContainerParagraph {
+    font-size: 1.2rem;
+  }
+
+  .firstSectionContainerWrapper,
+  .secondSectionContainerWrapper {
+    overflow: visible;
+  }
+
+  .firstSectionContainer,
+  .secondSectionContainer {}
+
+  .firstSectionButton,
+  .secondSectionButton {
+    justify-content: center;
+    padding-bottom: 1rem;
+  }
+
+
 
   .header {
     display: flex;
@@ -744,7 +762,7 @@ body {
     justify-content: center;
     flex-direction: column-reverse;
     align-items: center;
-    padding-top: 5rem;
+    padding-top: 0rem;
     width: 100vw;
     gap: 5rem;
   }
@@ -755,6 +773,14 @@ body {
     align-items: flex-start;
     height: 40%;
     width: 80%;
+    flex-wrap: wrap;
+    gap: 2rem;
+    height: auto;
+  }
+
+  .firstSectionImage,
+  .secondSectionImage {
+    border-radius: 0rem;
   }
 
 
