--- a/style.css
+++ b/style.css
@@ -947,6 +947,8 @@ body {
     display: flex;
     justify-content: center;
     width: 95%;
+    padding-top: 0.25rem;
+    padding-bottom: 0.25rem;
   }
 
 
