--- a/style.css
+++ b/style.css
@@ -628,11 +628,10 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 2.7rem;
+    width: 1.8rem;
     cursor: pointer;
     z-index: 999;
   }
-
 
   .heroSubTitleContainer p {
     font-size: 1.5rem;
@@ -669,7 +668,7 @@ body {
     display: flex;
     align-items: center;
     width: 50%;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
   }
 
   .hero {
@@ -726,15 +725,16 @@ body {
 
   .heroButton {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     width: 80%;
   }
 
   .heroButtonContent {
-    width: 20rem;
-    height: 6rem;
-    font-size: 1.8rem;
-    font-weight: 600;
+    width: 12rem;
+    height: 3rem;
+    font-size: 1.2rem;
+    font-weight: 400;
+    border-radius: 0.7rem;
   }
 
   .firstSectionContainerParagraph,
@@ -784,26 +784,33 @@ body {
 
   .firstSectionButton a,
   .secondSectionButton a {
-    justify-content: flex-start;
     padding-bottom: 1rem;
-    height: auto;
+    height: 73%;
+    width: 100%;
+
+  }
+
+  .firstSectionButton,
+  .secondSectionButton {
+    display: flex;
+    justify-content: flex-end;
     width: 100%;
   }
 
   .sectionButtonContent {
-    font-weight: 600;
+    font-weight: 300;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #ffffff;
-    border: 3px solid rgba(0, 0, 0, 0.5);
+    background-color: #000000;
+    border: 3px solid #000000;
     border-width: 3px;
-    width: 51.3%;
-    height: 68%;
+    width: 54.4%;
+    height: 100%;
     flex: 1;
     text-transform: uppercase;
     position: relative;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     border-radius: 0.4rem;
     letter-spacing: 0.04rem;
   }
@@ -844,7 +851,6 @@ body {
     display: block;
   }
 
-  /* Голямата снимка заема първите два реда и двете колони */
   .large-image {
     grid-column: 1 / 3;
     grid-row: 1 / 3;
