--- a/style.css
+++ b/style.css
@@ -634,7 +634,7 @@ body {
   }
 
   .heroSubTitleContainer p {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     font-weight: 600;
     margin: 0
   }
@@ -675,35 +675,35 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 50rem;
+    height: 47rem;
   }
 
   .heroTextContainer {
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    gap: 2rem;
-    height: 50%;
+    height: 15rem;
     width: 80%;
   }
 
   .heroTitle {
-    font-size: 4rem;
+    font-size: 2.5rem;
   }
 
   .heroSubTitleContainer {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     text-align: left;
-    width: 80%;
-    line-height: 1.2
+    width: 85%;
+    line-height: 1.1
   }
 
   .heroContent {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 6rem
+    gap: 0.2rem;
+    padding-bottom: 12rem;
   }
 
   .heroImage {
@@ -744,6 +744,7 @@ body {
   .productTitle {
     font-size: 1rem
   }
+
 
   .firstSectionContainerWrapper,
   .secondSectionContainerWrapper {
@@ -816,9 +817,7 @@ body {
   }
 
   .sectionButtonContent:hover {
-    color: rgb(0, 0, 0);
-    background-color: rgb(255, 255, 255);
-    cursor: pointer;
+    display: none;
   }
 
 
@@ -923,7 +922,10 @@ body {
     padding-bottom: 0.2rem;
   }
 
-
+  .productTitle {
+    font-weight: 500;
+    text-transform: uppercase;
+  }
 
   .productPrice {
     font-size: 0.8rem;
