--- a/style.css
+++ b/style.css
@@ -704,6 +704,7 @@ body {
     align-items: center;
     gap: 0.2rem;
     padding-bottom: 12rem;
+    aspect-ratio: 1/1;
   }
 
   .heroImage {
@@ -763,7 +764,7 @@ body {
     align-items: center;
     padding-top: 0rem;
     width: 100vw;
-    gap: 3rem;
+    gap: 2rem;
   }
 
   .firstSectionContainerText,
@@ -920,6 +921,7 @@ body {
   .productCardText {
     padding-left: 0.2rem;
     padding-bottom: 0.2rem;
+    gap: 0rem;
   }
 
   .productTitle {
@@ -929,6 +931,8 @@ body {
 
   .productPrice {
     font-size: 0.8rem;
+    object-position: top;
+    padding-bottom: 1rem;
   }
 
   .productDescription {
