--- a/style.css
+++ b/style.css
@@ -685,6 +685,7 @@ body {
     align-items: flex-start;
     height: 15rem;
     width: 80%;
+    padding-top: 9.5rem
   }
 
   .heroTitle {
@@ -884,10 +885,10 @@ body {
 
   .productCard {
     width: 45%;
-    background-color: #f5f5f5;
+    background-color: #ffffff;
     height: auto;
     margin: 1rem 0;
-    border: 1px solid #f6f6f6;
+    border: 1px solid #ffffff;
     gap: 5%;
     flex-wrap: wrap;
     flex-shrink: 1;
@@ -920,8 +921,9 @@ body {
   }
 
   .productCardText {
+    padding-top: 1rem;
     padding-left: 0.2rem;
-    padding-bottom: 0.2rem;
+    padding-bottom: 0.5rem;
     gap: 0rem;
   }
 
